--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "12.1.5",
     "react": "18.0.0",
+    "react-custom-roulette": "^1.2.0",
     "react-dom": "18.0.0"
   },
   "devDependencies": {
