--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@mui/lab": "^5.0.0-alpha.80",
     "@mui/material": "^5.6.3",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "yarn": "^1.22.18"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
