--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/lab": "^5.0.0-alpha.80",
     "@mui/material": "^5.6.3",
     "axios": "^0.27.2",
+    "firebase": "^8.8.1",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
